--- a/package.json
+++ b/package.json
@@ -10,6 +10,16 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.1.8"
+    "@astrojs/tailwind": "^3.1.1",
+    "@astrojs/vue": "^2.1.0",
+    "astro": "^2.1.8",
+    "nlp_compromise": "^7.0.0",
+    "tailwindcss": "^3.3.0",
+    "vue": "^3.2.47"
+  },
+  "devDependencies": {
+    "prettier": "^2.8.7",
+    "prettier-plugin-astro": "^0.8.0",
+    "prettier-plugin-tailwindcss": "^0.2.6"
   }
 }
