--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/tailwind": "^3.1.1",
     "@astrojs/vue": "^2.1.0",
     "astro": "^2.1.8",
+    "en-pos": "^1.0.16",
     "nlp_compromise": "^7.0.0",
     "nlptoolkit-parsetree": "^1.0.2",
     "tailwindcss": "^3.3.0",
