--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^3.1.1",
+    "@astrojs/vercel": "^3.2.2",
     "@astrojs/vue": "^2.1.0",
-    "astro": "^2.1.8",
+    "astro": "^2.2.1",
     "nlp_compromise": "^7.0.0",
     "tailwindcss": "^3.3.0",
     "vue": "^3.2.47"
